fix too much padding on notes after rotation

--- a/app_v2/songbook-app/src/pages/song/song.scss
+++ b/app_v2/songbook-app/src/pages/song/song.scss
@@ -53,6 +53,7 @@ page-song {
     transition: bottom 0.5s;
   }
 
+  #rondo_notes .scroll-content,
   #rondo_scrollable .scroll-content,
   .fixed-content {
     margin: 0 !important;
